# dream

./: .gitignore  README.md  pyproject.toml  setup.cfg 
dbz/: ZPdesign_holo_20250126_9pm.py  monoplus.py
